--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -73,7 +73,10 @@
                 disabled
                 slot="content">
 
-    <div class="page">Crop</div>
+    <image-cropper class="page" 
+                   on-image-cropper-cropped="__cropped">
+    </image-cropper>
+    
     <div class="page">Filters</div>
     <div class="page">Text</div>
 
