Now drawing from the webgl canvas, that is provided by webgl-filter.js, onto another canvas that is in the dom, instead of loading the canvas data into an image element via toDataURL. This change, along with the use of webgl, increases performance to allow for smooth slider adjustments at 60fps.

--- a/editors/image-adjuster.html
+++ b/editors/image-adjuster.html
@@ -62,12 +62,9 @@
 </style>
 
 
-<!-- MUST set crossorigin to allow WebGL to securely load the downloaded image. -->
-<img id="preview"
-		 class="shared-card-shadow" 
-		 crossorigin 
-     src="[[_previewSrc]]"
-     on-load="__loaded"/>
+<canvas id="preview"
+		 		class="shared-card-shadow">
+</canvas>
 
 
 <div id="content">
