First version of image-editor with all edit tab pages present. This version still needs work since items inside app-carousel cannot also have css sticky items. The carousel css overflow-x setting defeats any css sticky behaviors.

--- a/editors/image-cropper.html
+++ b/editors/image-cropper.html
@@ -124,10 +124,10 @@
 									 on-image-editor-item-btn-clicked="__cropClicked">
 
 	<crop-wrapper id="cropper"
-								class="section"
 								name="[[_name]]"
 								slot="preview"
-								src="[[_src]]">								
+								src="[[_src]]"
+								on-crop-wrapper-ready="__cropperReady">								
 	</crop-wrapper>
 
 	<!-- Top row of control buttons. -->
