Now only resetting each editor item when the editedFile property changes instead of resetting each time the element is out of view. Other quality of life improvements and fixes. Replaced app-carousel with the new tab-pages element which is smaller in size and is easier to use in cases where the user is not meant to manually scroll the elements horizontally. The tab-pages element also maintains slotted child element css sticky behaviors.

--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -32,7 +32,8 @@
   }
 
   .page {
-    min-width: 100%;
+    min-width:    100%;
+    margin-right: 16px;
   }
 
   *[hidden] {
@@ -76,34 +77,34 @@
   </paper-tabs>
 
 
-  <app-carousel id="carousel"
-                aspect-ratio="fill"
-                disabled
-                slot="content"
-                on-app-carousel-section-index-changed="__carouselIndexChanged">    
+  <tab-pages id="pages"
+             attr-for-selected="page"
+             selected="[[_selectedPage]]"
+             slot="content">    
     
-    <image-filters class="page" 
+    <image-filters class="page"
+                   edited-src="[[_editedSrc]]"
                    item="[[item]]" 
-                   page="filters" 
-                   selected="[[_selected]]"
+                   page="filters"
                    on-image-filters-filter-applied="__filtered">
     </image-filters>
 
     <image-adjuster class="page" 
+                    edited-src="[[_editedSrc]]"
                     item="[[item]]" 
                     page="adjust" 
-                    selected="[[_selected]]"
                     on-image-adjuster-adjustments-applied="__adjusted">                      
     </image-adjuster>
 
-    <image-cropper class="page" 
+    <image-cropper class="page"
+                   edited-src="[[_editedSrc]]"
                    item="[[item]]" 
                    page="crop"
-                   selected="[[_selected]]"
                    on-image-cropper-cropped="__cropped">
     </image-cropper>
 
-    <div class="page">
+    <div class="page" 
+         page="meta">
       <metadata-page dark-mode="[[darkMode]]"
                      geolocation="[[_geolocation]]"
                      hidden="[[_hideMeta]]"
@@ -115,7 +116,7 @@
       </metadata-page>
     </div>
 
-  </app-carousel>
+  </tab-pages>
 
 
 </app-header-overlay>
