Several image-editor quality of life improvements including hiding unselected tab pages for editor overlay exit, now properly resetting pages when an edit is made, pulled spinner out to be a singleton at the top level so it is guaranteed to overlay entire screen regardless of scroll or underlying content z-index, improved opening performance by setting the file item after opening for adjustments, crop and metadata pages, fixed an issue with the crop rotation-slider having incorrect measurements during initialization. Updated deps.

--- a/editors/image-adjuster.html
+++ b/editors/image-adjuster.html
@@ -34,11 +34,9 @@
 </style>
 
 
-<image-editor-item id="item" 
-									 button-disabled="[[_applyBtnDisabled]]" 
+<image-editor-item button-disabled="[[_applyBtnDisabled]]" 
 									 button-icon="brush" 
 									 button-label="APPLY"
-									 spinner-text="Applying adjustments."
 									 on-image-editor-item-btn-clicked="__applyClicked">
 
 	<canvas id="preview"
