--- a/editors/image-filters.html
+++ b/editors/image-filters.html
@@ -22,11 +22,9 @@
 </style>
 
 
-<image-editor-item id="item" 
-									 button-disabled="[[_applyBtnDisabled]]" 
+<image-editor-item button-disabled="[[_applyBtnDisabled]]" 
 									 button-icon="colorize" 
 									 button-label="APPLY"
-									 spinner-text="Applying filter."
 									 on-image-editor-item-btn-clicked="__applyClicked">
 
 <!-- MUST set crossorigin to allow WebGL to securely load the downloaded image. -->
