Fixed a bug where the image-adjuster had to be reset twice to clear all artifacts left from blurring an image. Completed wiring up the highQuality version of each file to the three editor tabs.

--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -62,7 +62,8 @@
     
     <image-filters class="page"
                    current="[[_currentPage]]"
-                   edited-src="[[_editedSrc]]"
+                   edited="[[_edited]]"
+                   high-quality="[[_highQuality]]"
                    item="[[item]]" 
                    page="filters"
                    selected="[[_selectedPage]]"
@@ -73,7 +74,8 @@
 
     <image-adjuster class="page" 
                     current="[[_currentPage]]"
-                    edited-src="[[_editedSrc]]"
+                    edited="[[_edited]]"
+                    high-quality="[[_highQuality]]"
                     item="[[_lazyItem]]" 
                     page="adjust"
                     selected="[[_selectedPage]]"
@@ -84,7 +86,8 @@
 
     <image-cropper class="page"
                    current="[[_currentPage]]"
-                   edited-src="[[_editedSrc]]"
+                   edited="[[_edited]]"
+                   high-quality="[[_highQuality]]"
                    item="[[_lazyItem]]" 
                    page="crop"                   
                    selected="[[_selectedPage]]"
