--- a/editors/image-cropper.html
+++ b/editors/image-cropper.html
@@ -80,7 +80,7 @@
 		display: none;
 	}
 
-	#reset {
+	#clear {
 		margin: 8px 0px;
 	}
 
@@ -253,12 +253,12 @@
 	<!-- Bottom row of control buttons. -->
 	<div class="section groups">
 
-		<!-- Reset button. -->
-		<paper-button id="reset"
+		<!-- Clear button. -->
+		<paper-button id="clear"
 									class="grouped single"
-									on-click="__resetClicked">
-			<iron-icon icon="image-editor-icons:refresh"></iron-icon>
-			<div>Reset</div>
+									on-click="__clearClicked">
+			<iron-icon icon="image-editor-icons:clear"></iron-icon>
+			<div>Clear</div>
 		</paper-button>
 
 		<!-- Direction buttons. -->
